# bier-rust

./: .gitignore  ANDROID_SETUP.md  Cargo.toml  Dioxus.toml  TASKS.md  check_icons.txt
assets/: main.css
backend/: Cargo.toml  check_output.txt  run_migrations.sh
backend/migrations/: 0001_initial_schema.sql  0002_add_sessions.sql  0003_verification.sql  0004_core_features.sql
backend/src/: main.rs
backend/src/definitions/: beers.rs  chat.rs  clubs.rs  events.rs  metadata.rs  mod.rs  user.rs
backend/src/schema/: mod.rs
backend/src/utils/: auth.rs  crypto.rs  email.rs  fs_util.rs  mod.rs  sanitization.rs
migrations/: 0001_initial_schema.sql  0002_add_sessions.sql  0003_verification.sql
src/: main.rs
src/api/: config.rs  mod.rs  storage.rs
src/components/: inputs.rs  login.rs  mod.rs  navbar.rs
src/screens/: clubs.rs  create_beer.rs  dashboard.rs  explore.rs  mod.rs  profile.rs
src/screens/forgot_password/: mod.rs  view_model.rs
src/screens/home/: mod.rs
src/screens/login/: mod.rs  view_model.rs
src/screens/register/: mod.rs  view_model.rs
src/screens/reset_password/: mod.rs  view_model.rs
src/screens/verify_email/: mod.rs  view_model.rs
