[package]
name = "bier-rust"
version = "0.1.0"
authors = ["Pajer3 <musieatsbeha633@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
dotenvy = "0.15.7"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "time",
    "uuid",
] }
tokio = { version = "1.49.0", features = ["full"] }
directories = "5.0"
dioxus-free-icons = { version = "0.10.0", features = ["lucide"] }

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
