[package]
name = "backend"
version = "0.1.0"
edition = "2024"


[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
dotenvy = "0.15.7"
rand_core = "0.9.5"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "time",
    "uuid",
] }
tokio = { version = "1.49.0", features = ["full"] } # async operations
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
async-graphql = { version = "7.2.1", features = ["time", "uuid"] }
async-graphql-axum = "7.2.1"
time = { version = "0.3.36", features = ["serde"] }
base64 = "0.22.1"
aes-gcm = "0.10.3"
serde_json = "1.0.149"
hex = "0.4.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
